--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -30,4 +36,8 @@ p {
 ul {
   list-style: none;
   padding: 0;
+}
+
+button.activeBtn {
+  background-color: #00b3ff5a;
 }
